[package]
name = "more_ranges"
version = "0.1.0"
authors = ["Anders Evensen"]
description = "Range types not provided in the standard library."
readme = "README.md"
repository = "https://github.com/Anders429/more_ranges"
license = "MIT OR Apache-2.0"
keywords = ["range", "exclusive", "excluded", "bound", "rangebound"]
categories = ["data-structures", "no-std"]
exclude = [".github/*"]

[dev-dependencies]
claim = "0.5.0"
