[package]
name = "more_ranges"
version = "0.1.0"
authors = ["Anders Evensen"]
description = "Range types not provided in the standard library."
readme = "README.md"
repository = "https://github.com/Anders429/more_ranges"
license = "MIT OR Apache-2.0"
keywords = ["range", "exclusive", "excluded", "bound", "rangebound"]
categories = ["data-structures", "no-std"]
exclude = [".github/*", "clippy.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "doc/docbox.html"]

[dependencies]
doc_item = {version = "0.2.3", optional = true}
serde = {version = "1.0.125", optional = true, default-features = false}

[dev-dependencies]
claim = "0.5.0"
serde_test = "1.0.125"

[build-dependencies]
autocfg = {git = "https://github.com/Anders429/autocfg"}
